# nano-banana-studio

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ffmpeg  Dockerfile.gpu  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  github.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  test.yml
backend/: requirements.txt
backend/api/: main.py  middleware.py
backend/prompt_enhancers/: seven_stage_pipeline.py
backend/services/: __init__.py  animation_service.py  audio_intelligence_service.py  captcha_solver.py  comfyui_service.py  face_service.py  llm_provider_service.py  ltx_video_service.py  musicgen_service.py  podcast_service.py  prompt_enhancer_8k.py  publishing_service.py  scene_assembly_service.py  screenplay_service.py  storyboard_service.py  suno_pip_client.py  suno_service.py  thumbnail_service.py  tts_service.py  whisper_service.py  youtube_service.py
backend/services/timeline/: __init__.py  models.py  service.py
backend/workers/: audio_worker.py  video_worker.py
config/: llm_providers.yaml  model_registry_complete.yaml  models.yaml  styles.yaml  transitions.yaml
config/prompts/: cinematic_system.txt  concept_system.txt  consistency_system.txt  narrative_system.txt  scene_system.txt  technical_system.txt  visual_system.txt
docker/: docker-compose.suno.yml
docs/: API_REFERENCE.md  API_SPEC.md  ARCHITECTURE.md  CODE_QUALITY_STANDARDS.md  COMPLETION_ROADMAP.md  CONFIGURATION.md  FEATURES.md  GAP_ANALYSIS_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MASTER_MILESTONE_PLAN_v2.md  MODELS.md  PRODUCTION_AUDIT_REPORT.md  PROFESSIONAL_STUDIO_ARCHITECTURE.md  SUNO_INTEGRATION_GUIDE.md  SUNO_QUICKSTART.md  TEST_COVERAGE_AUDIT.md  TIMELINE_EDITOR.md  TROUBLESHOOTING.md  WORKFLOWS.md  YOUTUBE_PUBLISHING.md  nano-banana1.txt
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  api.js  api.test.js  index.css
frontend/src/components/: AudioMixer.jsx  CharacterManager.jsx  DraggableTimeline.jsx  ProgressIndicator.jsx  YouTubePublisher.jsx  (+1 more)
n8n/workflows/: 01_prompt_enhancer_master.json  02_image_generation.json  03_multi_asset_processor.json  04_video_assembly_pro.json  05_video_extender.json  06_master_pipeline.json  07_face_character_system.json  08_suno_music_generator.json  09_audio_beat_analyzer.json  10_image_to_video_animation.json  11_pdf_markdown_parser.json  12_comfyui_integration.json  13_suno_music_pipeline_v2.json  99_full_music_video_pipeline.json
scripts/: download-all-models.ps1  download_models.ps1  run-dev.ps1  setup-suno.ps1  setup.ps1  test-suno.ps1
scripts/code-quality/: auto-repair.ps1  debug-helper.py  eslint.config.js  event-handler-audit.js  run-all-checks.ps1
templates/: christmas_music_video.md
tests/: __init__.py  conftest.py  test_animation_service.py  test_api_endpoints.py  test_audio_intelligence_service.py  test_e2e_workflows.py  test_face_service.py  test_integration.py  test_llm_provider_service.py  test_services.py  test_suno_service.py  test_timeline_editor.py  test_tts_service.py  test_whisper_service.py  test_youtube_service.py
(+8 files in other folders)
